Update version number to 1.6.3

--- a/Config/Jabo.ini
+++ b/Config/Jabo.ini
@@ -4,7 +4,7 @@
 // This is used solely as a resource of all Jabo Video information requirements.
 // ----------------------------------------------------------------------------
 //
-// This file is only to be used with Project64 1.6.2 (Legacy) & higher
+// This file is only to be used with Project64 1.6.3 (Legacy) & higher
 //
 //---- START OF INI FILE HEADER -----------------------------------------------
 
@@ -17,8 +17,8 @@
 
 Author=PJ64LegacyTeam
 Date=9th July 2023 Version: 1
-Homepage=project64.emulation64.com
-Version=Project64 1.6.2 (Lagacy)
+Homepage=www.project64-legacy.com
+Version=Project64 1.6.3 (Legacy)
 
 [Microcode Identifiers]
 38221D7F=0 //SD Hiryuu no Ken Densetsu (J), near start (Smiff)
