--- a/Config/Jabo.ini
+++ b/Config/Jabo.ini
@@ -19,7 +19,7 @@
 [Meta] // Metadata: information for Project64 GUI, Help > About INI files
 
 Author=PJ64LegacyTeam
-Date=29th July 2023
+Date=11th March 2024
 Homepage=www.project64-legacy.com
 Version=Project64 1.6.3 (Legacy)
 
@@ -3336,9 +3336,13 @@ Good Name=Super Mario 64 (J)
 Internal Name=SUPER MARIO 64
 
 [635A2BFF-8B022326-C:45]
+Aspect Correction=0
+Clear Frame=0
 Culling=1
 Good Name=Super Mario 64 (U)
 Internal Name=SUPER MARIO 64
+Resolution Height=-1
+Resolution Width=-1
 
 [D6FBA4A8-6326AA2C-C:4A]
 Good Name=Super Mario 64 - Shindou Pack Taiou Version (J) (V1.3)
@@ -6076,10 +6080,13 @@ Good Name=Super Smash Bros. (CHN) (iQue)
 Internal Name=SUPER SMASH BROS CHN
 
 [3D81FB3E-BD843E34-C:0]
+Clear Frame=0
 Culling=1
 Emulate Clear=1
 Good Name=The Legend of Zelda - Ocarina of Time (TWN) (iQue)
 Internal Name=THE LEGEND OF ZELDA TWN
+Resolution Height=-1
+Resolution Width=-1
 Self Texture=1
 
 [B1E1E07B-051269DD-C:0]
@@ -6361,3 +6368,7 @@ Internal Name=XENO CRISIS
 //
 //End Of File----------> Anything under here was put in by you <--------------------------------
 
+[D510922E-3D0D44CC-C:4A]
+Clear Frame=1
+Resolution Height=240
+Resolution Width=-1
